force-app/main/default/objects/Lead_Audit__c/Lead_Audit__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail for Lead Tracker pipeline activity. Every stage change, field update, assignment, and system event on a Lead record creates a Lead_Audit__c entry. Records are never deleted — the audit log is append-only by design. Used for compliance, coaching, and pipeline velocity analytics.</description>
    <label>Lead Audit</label>
    <nameField>
        <displayFormat>LA-{000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>