force-app/main/default/objects/Lead_Audit__c/fields/Audit_Type__c.field-meta.xml
<CustomField>
    <fullName>Audit_Type__c</fullName>
    <description>Categorizes what kind of event this audit record represents. Used to filter the audit timeline by event category and to drive reporting on pipeline activity patterns.</description>
    <inlineHelpText>The type of event that generated this audit entry.</inlineHelpText>
    <label>Audit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage Change</fullName>
            </value>
            <value>
                <fullName>Status Update</fullName>
            </value>
            <value>
                <fullName>Field Update</fullName>
            </value>
            <value>
                <fullName>Score Update</fullName>
            </value>
            <value>
                <fullName>Stale Flagged</fullName>
            </value>
            <value>
                <fullName>Stale Cleared</fullName>
            </value>
            <value>
                <fullName>Re-assigned</fullName>
            </value>
            <value>
                <fullName>Activity Logged</fullName>
            </value>
            <value>
                <fullName>Health Updated</fullName>
            </value>
            <value>
                <fullName>System Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>