force-app/main/default/objects/Lead_Audit__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Lead record this audit entry belongs to. Audit records are preserved with a null Lead reference if the parent Lead is deleted.</description>
    <inlineHelpText>The Lead this audit entry was created for.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Audits</relationshipLabel>
    <relationshipName>Lead_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>