force-app/main/default/objects/Lead_Audit__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Human-readable description of what happened. Written to be meaningful on its own without needing to look up Old_Value__c and New_Value__c. Example: "Stage changed from 'Initial Inquiry' to 'Discovery Call'".</description>
    <helpText>Summary of what changed. Displayed in the audit timeline on the lead record.</helpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>