force-app/main/default/objects/Lead_Audit__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <description>The value of the changed field before this event occurred. Truncated to 255 characters for storage. Paired with New_Value__c to provide a before/after diff for any field change audit entry.</description>
    <helpText>Previous value before this change. Null for creation events.</helpText>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>