force-app/main/default/objects/Lead_Audit__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <description>The Salesforce User who initiated this event. Populated via UserInfo.getUserId() in the trigger context. For system-initiated events (batch jobs, automations), this will be the running user of the automation.</description>
    <helpText>The user who performed this action. System events will show the automation running user.</helpText>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Lead Audits</relationshipLabel>
    <relationshipName>Lead_Audits_By_User</relationshipName>
    <type>Lookup</type>
</CustomField>